Capture range values.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
           Length
         </div>
 
-        <div class="optionValue">
+        <div
+          id="lengthValue"
+          class="optionValue"
+        >
           16
         </div>
 
@@ -30,6 +33,7 @@
           max="36"
           value="16"
           type="range"
+          data-id="length"
           class="optionRange"
         />
       </div>
@@ -39,7 +43,10 @@
           Digits
         </div>
 
-        <div class="optionValue">
+        <div
+          id="digitsValue"
+          class="optionValue"
+        >
           4
         </div>
 
@@ -48,6 +55,7 @@
           max="36"
           value="4"
           type="range"
+          data-id="digits"
           class="optionRange"
         />
       </div>
@@ -57,7 +65,10 @@
           Symbols
         </div>
 
-        <div class="optionValue">
+        <div
+          id="symbolsValue"
+          class="optionValue"
+        >
           4
         </div>
 
@@ -66,11 +77,12 @@
           max="36"
           value="4"
           type="range"
+          data-id="symbols"
           class="optionRange"
         />
       </div>
     </div>
   </div>
-  <script src="app.js?v=1"></script>
+  <script src="app.js?v=2"></script>
 </body>
 </html>
