--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Piper</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="style.css?v=3" />
+  <link rel="stylesheet" href="style.css?v=4" />
 </head>
 <body>
   <div id="app">
@@ -15,7 +15,7 @@
     />
 
     <div id="options">
-      <div class="option">
+      <div class="option1">
         <div class="optionTitle">
           Length
         </div>
@@ -36,9 +36,57 @@
           class="optionRange"
         />
       </div>
+
+      <div class="option2">
+        <div class="optionCheckbox"></div>
+
+        <div class="optionCheckboxBigTitle">
+          Lowercase
+        </div>
+
+        <div class="optionCheckboxSmallTitle">
+          (abcdefghijklmnopqrstuvwxyz)
+        </div>
+      </div>
+
+      <div class="option2">
+        <div class="optionCheckbox"></div>
+
+        <div class="optionCheckboxBigTitle">
+          Uppercase
+        </div>
+
+        <div class="optionCheckboxSmallTitle">
+          (ABCDEFGHIJKLMNOPQRSTUVWXYZ)
+        </div>
+      </div>
+
+      <div class="option2">
+        <div class="optionCheckbox"></div>
+
+        <div class="optionCheckboxBigTitle">
+          Digits
+        </div>
+
+        <div class="optionCheckboxSmallTitle">
+          (0123456789)
+        </div>
+      </div>
+
+      <div class="option2">
+        <div class="optionCheckbox"></div>
+
+        <div class="optionCheckboxBigTitle">
+          Symbols
+        </div>
+
+        <div class="optionCheckboxSmallTitle">
+          (!"#$%&\'()*+,-./:;<=>?@[\]^_`{|}~)
+        </div>
+      </div>
     </div>
   </div>
 
-  <script src="app.js?v=5"></script>
+  <script src="app.js?v=6"></script>
 </body>
 </html>
