Update small title view.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Piper</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="style.css?v=5" />
+  <link rel="stylesheet" href="style.css?v=6" />
 </head>
 <body>
   <div id="app">
@@ -50,7 +50,7 @@
         </div>
 
         <div class="optionCheckboxSmallTitle">
-          (abcdefghijklmnopqrstuvwxyz)
+          abc
         </div>
       </div>
 
@@ -67,7 +67,7 @@
         </div>
 
         <div class="optionCheckboxSmallTitle">
-          (ABCDEFGHIJKLMNOPQRSTUVWXYZ)
+          ABC
         </div>
       </div>
 
@@ -84,7 +84,7 @@
         </div>
 
         <div class="optionCheckboxSmallTitle">
-          (0123456789)
+          123
         </div>
       </div>
 
@@ -101,7 +101,7 @@
         </div>
 
         <div class="optionCheckboxSmallTitle">
-          (!"#$%&\'()*+,-./:;<=>?@[\]^_`{|}~)
+          #$&
         </div>
       </div>
     </div>
