Add PWA support.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <title>Piper</title>
+
   <meta charset="utf-8" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Random password generator" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+
+  <meta name="apple-mobile-web-app-title" content="Piper" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
+
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css?v=6" />
+  <link rel="icon" type="image/png" href="images/icons/icon-512x512.png" />
 </head>
 <body>
   <div id="app">
@@ -107,6 +118,6 @@
     </div>
   </div>
 
-  <script src="app.js?v=7"></script>
+  <script src="app.js?v=8"></script>
 </body>
 </html>
