Add cookie support.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,11 @@
 
         <div
           id="lengthValue"
-          class="optionValue"
-        >
-          16
-        </div>
+          class="optionValue"></div>
 
         <input
           min="1"
           max="36"
-          value="16"
           type="range"
           data-id="length"
           class="optionRange"
@@ -51,7 +47,7 @@
       <div class="option2">
         <div
           data-id="lowercase"
-          class="optionCheckboxWrapper checked"
+          class="optionCheckboxWrapper"
         >
           <div class="optionCheckbox"></div>
 
@@ -118,6 +114,6 @@
     </div>
   </div>
 
-  <script src="app.js?v=8"></script>
+  <script src="app.js?v=9"></script>
 </body>
 </html>
