--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css?v=8" />
+  <link rel="stylesheet" href="style.css?v=9" />
   <link rel="icon" type="image/png" href="images/icons/icon-512x512.png" />
 </head>
 <body>
   <div id="app">
+    <h1 id="appTitle">Piper</h1>
+
     <div id="generatedPasswordWrapper">
       <input
         readonly
