Add GitHub icon.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
   <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css?v=9" />
+  <link rel="stylesheet" href="style.css?v=10" />
   <link rel="icon" type="image/png" href="images/icons/icon-512x512.png" />
 </head>
 <body>
   <div id="app">
-    <h1 id="appTitle">Piper</h1>
+    <h1 id="appTitle">
+      Piper
+      <a
+        id="gitHubIcon"
+        target="_blank"
+        href="https://github.com/ozgrozer/piper"
+      ></a>
+    </h1>
 
     <div id="generatedPasswordWrapper">
       <input
