--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css?v=12" />
+  <link rel="stylesheet" href="style.css?v=13" />
   <link rel="icon" type="image/png" href="images/icons/icon-512x512.png" />
 </head>
 <body>
@@ -37,6 +37,10 @@
 
       <div id="generateNewPassword">g</div>
       <div id="copyPassword">c</div>
+    </div>
+
+    <div id="passwordStrength">
+      <div id="passwordStrengthTrack"></div>
     </div>
 
     <div id="options">
@@ -128,6 +132,6 @@
     </div>
   </div>
 
-  <script src="app.js?v=10"></script>
+  <script src="app.js?v=11"></script>
 </body>
 </html>
