--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css?v=13" />
+  <link rel="stylesheet" href="style.css?v=14" />
   <link rel="icon" type="image/png" href="images/icons/icon-512x512.png" />
 </head>
 <body>
@@ -25,6 +25,11 @@
         id="gitHubIcon"
         target="_blank"
         href="https://github.com/ozgrozer/piper"
+      ></a>
+      <a
+        id="twitterIcon"
+        target="_blank"
+        href="https://twitter.com/ozgrozer"
       ></a>
     </h1>
 
