--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         id="generatedPassword"
       />
 
-      <div id="generateNewPassword">g</div>
-      <div id="copyPassword">c</div>
+      <div id="generateNewPassword" title="Generate">g</div>
+      <div id="copyPassword" title="Copy">c</div>
     </div>
 
     <div id="passwordStrength">
